Added full year fees

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -8,31 +8,38 @@ plans:
     description: Try it out!  Great plan for yourself, friends, and family.
     price: 
       yearly: 0
+      full-year: 0
       monthly: 0
     action: resources/download
     action-name: Get Nomad
     items:
-      - title: Privately share full drive
-      - title: Unlimited shares
+      - title: 3 Peers
+      - title: Private drive collaboration
+      - title: Link sharing
+      - title: Unlimited subscriptions
       - title: Unlimited storage
 
   - title: Freelancer
     description: Great fit for independent professionals.
     price: 
-      yearly: 1.60
-      monthly: 2
+      yearly: 2
+      full-year: 24
+      monthly: 3
     action: resources/download
     action-name: Contact Us
     items:
-      - title: Privately share full drive
-      - title: Unlimited shares
+      - title: Minimum 5 Peers
+      - title: Private drive collaboration
+      - title: File sharing via link
+      - title: Unlimited suscriptions
       - title: Unlimited storage
 
   - title: Business
     description: Perfect for small businesses and multi-site operations.
     price:
-      yearly: 39
-      monthly: 49
+      yearly: 4
+      full-year: 48
+      monthly: 5
     action: https://t.me/diode_chain
     action-name: Contact Us
     items:
@@ -47,8 +54,9 @@ plans:
   - title: Enterprise
     description: For advanced IT and team collaboration needs.
     price:
-      yearly: 159
-      monthly: 199
+      yearly: 8
+      full-year: 96
+      monthly: 10
     action: https://t.me/diode_chain
     action-name: Contact Us
     items:
