Add mimimum users field

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -10,10 +10,11 @@ plans:
       yearly: 0
       full-year: 0
       monthly: 0
+      min-users: 0
     action: resources/download
     action-name: Get Nomad
     items:
-      - title: 3 Peers
+      - title: Up to 3 users
       - title: Private drive collaboration
       - title: Link sharing
       - title: Unlimited subscriptions
@@ -25,10 +26,10 @@ plans:
       yearly: 2
       full-year: 24
       monthly: 3
+      min-users: 5
     action: resources/download
     action-name: Contact Us
     items:
-      - title: Minimum 5 Peers
       - title: Private drive collaboration
       - title: File sharing via link
       - title: Unlimited suscriptions
@@ -40,6 +41,7 @@ plans:
       yearly: 4
       full-year: 48
       monthly: 5
+      min-users: 10
     action: https://t.me/diode_chain
     action-name: Contact Us
     items:
@@ -57,6 +59,7 @@ plans:
       yearly: 8
       full-year: 96
       monthly: 10
+      min-users: 20
     action: https://t.me/diode_chain
     action-name: Contact Us
     items:
