Removed enterprise, cleaned up features

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -14,11 +14,10 @@ plans:
     action: resources/download
     action-name: Get Nomad
     items:
-      - title: Up to 3 users
-      - title: Private drive collaboration
-      - title: Link sharing
-      - title: Unlimited subscriptions
       - title: Unlimited storage
+      - title: Private file collaboration
+      - title: File sharing via link
+      - title: Up to 3 users
 
   - title: Freelancer
     description: Great fit for independent professionals.
@@ -30,10 +29,10 @@ plans:
     action: resources/download
     action-name: Contact Us
     items:
-      - title: Private drive collaboration
-      - title: File sharing via link
-      - title: Unlimited suscriptions
-      - title: Unlimited storage
+      - title: All Nomad +
+      - title: More users (minimum 5)
+      - title: Password protected links
+      - title: Basic support
 
   - title: Business
     description: Perfect for small businesses and multi-site operations.
@@ -45,31 +44,9 @@ plans:
     action: https://t.me/diode_chain
     action-name: Contact Us
     items:
-      - title: All Nomad +
-      - title: Link sharing
-      - title: Web access
-      - title: Subfolder permissions
-      - title: Headless backups
-      - title: Business support
-
-
-  - title: Enterprise
-    description: For advanced IT and team collaboration needs.
-    price:
-      yearly: 8
-      full-year: 96
-      monthly: 10
-      min-users: 20
-    action: https://t.me/diode_chain
-    action-name: Contact Us
-    items:
-      - title: All Business +
-      - title: Data room insights
-      - title: User administration
-      - title: Versioning and recovery
-      - title: Private cloud backups
-      - title: Priority bandwidth
-      - title: Enterprise support
+      - title: All Freelancer +
+      - title: Premium support
+      - title: Minimum 10 Users
 
 items:
   - title: Drives
