--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 header-title: Plans and Pricing
-header-description: Our mission is to empower secure communication with edge infrastructure. 
+header-description: Our mission is to enable private, secure, and affordable communications. 
 
 plans:
   - title: Nomad
@@ -10,27 +10,26 @@ plans:
       yearly: 0
       full-year: 0
       monthly: 0
-      min-users: 0
     action: resources/download
     action-name: Get Nomad
     items:
       - title: Unlimited storage
-      - title: Private file collaboration
+      - title: Private drive collaboration
       - title: File sharing via link
       - title: Up to 3 users
 
   - title: Freelancer
     description: Great fit for independent professionals.
     price: 
-      yearly: 2
-      full-year: 24
-      monthly: 3
-      min-users: 5
-    action: resources/download
+      yearly: 1.67
+      full-year: 20
+      monthly: 2
+    action: https://t.me/diode_chain
     action-name: Contact Us
     items:
       - title: All Nomad +
       - title: More users (minimum 5)
+      - title: Additional drives
       - title: Password protected links
       - title: Basic support
 
@@ -40,7 +39,6 @@ plans:
       yearly: 4
       full-year: 48
       monthly: 5
-      min-users: 10
     action: https://t.me/diode_chain
     action-name: Contact Us
     items:
