--- a/pricing/index.html
+++ b/pricing/index.html
@@ -25,7 +25,7 @@ plans:
       full-year: 20
       monthly: 2
     action: https://t.me/diode_chain
-    action-name: Contact Us
+    action-name: Coming Soon
     items:
       - title: All Nomad +
       - title: More users (minimum 5)
@@ -40,7 +40,7 @@ plans:
       full-year: 48
       monthly: 5
     action: https://t.me/diode_chain
-    action-name: Contact Us
+    action-name: Coming Soon
     items:
       - title: All Freelancer +
       - title: Minimum 10 Users
