--- a/solutions/private-collaboration/index.html
+++ b/solutions/private-collaboration/index.html
@@ -1,14 +1,14 @@
 ---
 layout: solutions
 page-title: Private Collaboration 
-page-description: Collaborate privately on personal and business information.
+page-description: Collaborate on personal and business information with full confidence in the privacy of your data.
 solutions:
-  - title: Team File Access
-    description: Use dDrive to grant and manage remote access to your on-site files without VPNs or other complicated IT systems.  It works just like a folder on their computer.
-  - title: Partners and Customers
-    description: Share files and data rooms with partners and customers using dDrive’s web-sharing feature.  Have visibility into what is being accessed and by who.
-  - title: Intranet Websites
-    description: Securely publish internal knowledge base websites and other web-based tools to your remote team, and/or select partners, using the Diode CLI.
+  - title: Native Workflow
+    description: Diode Drives works just like a folder on your computer, but keeps synchronized at all times with other collaborators.
+  - title: No IT Administration
+    description: Get the benefits of a high security system without requiring any VPN setup, IT systems configuration, or customization.
+  - title: Regulatory Compiance
+    description: Control of where your data is stored makes it easy to achieve regulatory hurdles.
 downloads:
   - title: dDrive
     xs-title: Diode Drive
