--- a/solutions/private-collaboration/index.html
+++ b/solutions/private-collaboration/index.html
@@ -6,9 +6,9 @@ solutions:
   - title: Native Workflow
     description: Diode Drives works just like a folder on your computer, but keeps synchronized at all times with other collaborators.
   - title: No IT Administration
-    description: Get the benefits of a high security system without requiring any VPN setup, IT systems configuration, or customization.
+    description: You get the benefits of a high security system without requiring any VPN setup, IT systems configuration, or customization.
   - title: Regulatory Compiance
-    description: Control of where your data is stored makes it easy to achieve regulatory hurdles.
+    description: You have full control over where your data is stored, making it easy to achieve regulatory hurdles.
 downloads:
   - title: dDrive
     xs-title: Diode Drive
