--- a/solutions/file-sharing/index.html
+++ b/solutions/file-sharing/index.html
@@ -1,12 +1,12 @@
 ---
 layout: solutions
 page-title: File Sharing
-page-description: Share large or sensitive files without email, and without uploading to the cloud
+page-description: Share large or sensitive files without email, and without uploading to the cloud.
 solutions:
   - title: No Uploads
     description: Files are shared directly from your computer or other synchronized peer.  Your files never need to be uploaded to cloud storage.
   - title: Send a Link
-    description: Files are shared via link - you can send the link via email, chat, or other method even if the other person doesn't have an account.
+    description: Files are shared via link.  You can send the link via email, chat, or other method - even if the other person doesn't have an account.
   - title: Permissions and Security
     description: Each file link can be configured with the appropriate level of security, and your recipients' contact information is never exposed.
 downloads:
