--- a/solutions/backup/index.html
+++ b/solutions/backup/index.html
@@ -4,11 +4,11 @@ page-title: Backup
 page-description: Backup your data to any place you deem is private and safe without your files ever being stored in the cloud.
 solutions:
   - title: Never Lose Files
-    description: Your dDrive backup peer automatically synchronizes files wherever you are in the world.  Even if you lose access to your laptop, your files are safe.
+    description: Your dDrive backup peer(s) automatically synchronizes files wherever you are in the world.  Even if you lose access to your laptop, your files can be recovered.
   - title: Private Backups
-    description: Some information is just too sensitive to store on the cloud.  Your configured dDrive peers backup your data without cloud storage or centralized technologies.
+    description: Some information is just too sensitive to store on the cloud.  Your configured dDrive peer(s) backup your data without cloud storage or centralized technologies.
   - title: Secure Location
-    description: You choose where to put your backup peer(s).  Wherever you deem is private and save - whether that be under your desk, with a trusted colleague, or at an off site location.
+    description: You choose where to put your backup peer(s).  Wherever you deem is private and safe - whether that be under your desk, with a trusted colleague, or at an off-site location.
 downloads:
   - title: dDrive
     xs-title: Diode Drive
