--- a/solutions/serverless-communications/index.html
+++ b/solutions/serverless-communications/index.html
@@ -5,7 +5,7 @@ page-description: By using the Diode Network, no Internet IT infrastructure is r
 solutions:
   - title: Cameras and Internet of Things
     description: Cameras and IoT devices can publish secure streams of data without preconfiguring application details.  Each device has a globally unique address with comprehensive chain of ownership functionality.     
-  - title: Remote Access for Storage and IT Equipment
+  - title: Remote Access for File Storage and IT Equipment
     description: By using the Diode Network as the routing and permission layer for remote access to NAS systems and other IT equipment, manufactures can focus on their core compentency and do more.
   - title: Private Communications
     description: Fully decentralized, trustless applications can be deployed on the Diode Network, enabling better user experiences and unique value propositions for security and privacy.
