--- a/status/index.html
+++ b/status/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <head>
-    <title>Diode℠ Prenet Status</title>
+    <title>Diode™ Prenet Status</title>
     <meta charset="utf-8">
     <base href="{{ site.github.url }}/" target="_self"></base>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
