--- a/products/d-drive/thanks/index.html
+++ b/products/d-drive/thanks/index.html
@@ -2,7 +2,6 @@
 layout: default
 header-title: Thanks for downloading Diode Drive!
 header-description: Here are some links to help you get started
-subtitle: ABC
 
 section:
   items:
@@ -19,10 +18,9 @@ section:
 
 {% include breadcrumbs.html %}
 
-<section class="site-section section-focus privacy-policy-section">
+<section class="site-section section-focus">
     <div class="container">
       <h2 class="site-section__title">{{ page.header-title }}</h2>
-      <h3 class="site-section__description">{{ page.header-description }}</h3>
       <div class="item-container">
         <div class="item">
           <div class="item-description">
@@ -47,5 +45,4 @@ section:
       {% endfor %}
     </div>
 </section>
-  
-</section>
+
