--- a/products/d-drive/thanks/index.html
+++ b/products/d-drive/thanks/index.html
@@ -5,13 +5,30 @@ header-description: Here are some links to help you get started
 
 section:
   items:
-    - title: Item 1
+    - title: Setup Diode Drive
+      link: https://support.diode.io/article/d3eguu0pem-setup-diode-drive
       description: |
-        Description 1
+        The setup article walks you through how to setup Diode Drive on your system.
 
-    - title: Item 2
+    - title: Share a File or Folder
+      link: https://support.diode.io/article/v428b36e31
       description: |
-        Description 2
+        A walk through of how to share a file or folder with someone even if they don't have Diode Drive installed.         
+
+    - title: Add a Team Member to Sync Files
+      link: https://support.diode.io/article/jkzakxo7a0
+      description: |
+        A walk through of how to add a Team Member (or other device) to keep files synchronized for collaboration or backup use cases.
+
+    - title: More Articles
+      link: https://support.diode.io/category/njb9fd8sl9-diode-drive
+      description: |
+        Our support site's Diode Drive area has more articles about Diode Drive - from "how it works" to additional walk throughs.
+
+    - title: Contact Us!
+      link: https://t.me/diode_chain
+      description: |
+        You can connect with us on our Telegram group or email directly to support@diode.io.
 ---
 
 {% include header.html %}
@@ -26,16 +43,14 @@ section:
       <div class="item-container">
         <div class="item">
           <div class="item-title-wrapper">
-            <span class="number">{{ forloop.index + 1 }}</span>
-            <h4 class="item-title">
-              {{ item.title }}
-            </h4>
+            <a href="{{ item.link }}"><h4 class="item-title">{{ item.title }}</h4></a>
           </div>
           <div class="item-description">
             {{ item.description | markdownify }}
           </div>
         </div>
       </div>
+      </br>
     {% endfor %}
   </div>
 </section>
