--- a/products/d-drive/thanks/index.html
+++ b/products/d-drive/thanks/index.html
@@ -43,7 +43,7 @@ section:
       <div class="item-container">
         <div class="item">
           <div class="item-title-wrapper">
-            <a href="{{ item.link }}"><h4 class="item-title">{{ item.title }}</h4></a>
+            <a href="{{ item.link }}" target="_blank"><h4 class="item-title">{{ item.title }}</h4></a>
           </div>
           <div class="item-description">
             {{ item.description | markdownify }}
