--- a/products/d-drive/thanks/index.html
+++ b/products/d-drive/thanks/index.html
@@ -7,28 +7,22 @@ section:
   items:
     - title: Setup Diode Drive
       link: https://support.diode.io/article/d3eguu0pem-setup-diode-drive
-      description: |
-        The setup article walks you through how to setup Diode Drive on your system.
 
     - title: Share a File or Folder
       link: https://support.diode.io/article/v428b36e31
-      description: |
-        A walk through of how to share a file or folder with someone even if they don't have Diode Drive installed.         
 
-    - title: Add a Team Member to Sync Files
+    - title: Backup Confidential Files
+      https://support.diode.io/article/x859ax5avc
+
+    - title: Add a Team Member or Device
       link: https://support.diode.io/article/jkzakxo7a0
-      description: |
-        A walk through of how to add a Team Member (or other device) to keep files synchronized for collaboration or backup use cases.
 
     - title: More Articles
       link: https://support.diode.io/category/njb9fd8sl9-diode-drive
-      description: |
-        Our support site's Diode Drive area has more articles about Diode Drive - from "how it works" to additional walk throughs.
 
     - title: Contact Us!
       link: https://t.me/diode_chain
-      description: |
-        You can connect with us on our Telegram group or email directly to support@diode.io.
+
 ---
 
 {% include header.html %}
@@ -51,5 +45,6 @@ section:
       </br>
     {% endfor %}
   </div>
+  </br>
 </section>
 
