--- a/products/d-drive/thanks/index.html
+++ b/products/d-drive/thanks/index.html
@@ -12,7 +12,7 @@ section:
       link: https://support.diode.io/article/v428b36e31
 
     - title: Backup Confidential Files
-      https://support.diode.io/article/x859ax5avc
+      link: https://support.diode.io/article/x859ax5avc
 
     - title: Add a Team Member or Device
       link: https://support.diode.io/article/jkzakxo7a0
