--- a/lp/01/index.html
+++ b/lp/01/index.html
@@ -18,7 +18,7 @@ section:
 
 {% include header.html %}
 
-{% include sections/hero.html %} 
+{% include sections/hero-lp.html %} 
 
 {% include breadcrumbs.html %}
 
