--- a/lp/01/index.html
+++ b/lp/01/index.html
@@ -3,6 +3,9 @@ layout: default
 header-title: Landing Page 01
 header-description: This is our prototype landing page
 
+### Hero Section
+hero-title: Reclaim your digital sovereignty
+
 section:
   items:
     - title: Section 1
