--- a/lp/01/index.html
+++ b/lp/01/index.html
@@ -8,6 +8,16 @@ hero-title: Reclaim your digital sovereignty
 
 hero-xs-title: Reclaim your digital sovereignty
 
+page-title: File Sharing
+page-description: Share large or confidential files without email, and without uploading to the cloud.
+solutions:
+  - title: No Uploads
+    description: Files are shared directly from your computer or other synchronized peer.  Your files never need to be uploaded to cloud storage.
+  - title: Send a Link
+    description: Files are shared via link.  You can send the link via email, chat, or other method - even if the other person doesn't have an account.
+  - title: Permissions and Security
+    description: Each file link can be configured with the appropriate level of security, and your recipients' contact information is never exposed.
+
 section:
   items:
     - title: Section 1
@@ -24,6 +34,7 @@ section:
 {% include header.html %}
 
 {% include sections/hero-lp.html %} 
+{% include sections/solutions.html %} 
 
 {% include breadcrumbs.html %}
 
