--- a/lp/01/index.html
+++ b/lp/01/index.html
@@ -10,6 +10,7 @@ hero-xs-title: Reclaim your digital sovereignty
 
 page-title: File Sharing
 page-description: Share large or confidential files without email, and without uploading to the cloud.
+solution-bg-image: https://www.telematika.org/images/post/blockchain-talks-eueungmulyana_hu061cfe6059b06dd53f3f0681cc3724e3_54493_900x500_fit_q75_box.jpg
 solutions:
   - title: No Uploads
     description: Files are shared directly from your computer or other synchronized peer.  Your files never need to be uploaded to cloud storage.
