--- a/lp/01/index.html
+++ b/lp/01/index.html
@@ -5,12 +5,11 @@ header-description: This is our prototype landing page
 
 ### Hero Section
 hero-title: Reclaim your digital sovereignty
-
 hero-xs-title: Reclaim your digital sovereignty
 
 page-title: File Sharing
 page-description: Share large or confidential files without email, and without uploading to the cloud.
-solution-bg-image: https://www.telematika.org/images/post/blockchain-talks-eueungmulyana_hu061cfe6059b06dd53f3f0681cc3724e3_54493_900x500_fit_q75_box.jpg
+solution-bg-image: https://stoffe.kawaiifabric.com/images/product_images/large_img/black-mesh-fabric-223630-1.jpg
 solutions:
   - title: No Uploads
     description: Files are shared directly from your computer or other synchronized peer.  Your files never need to be uploaded to cloud storage.
@@ -18,6 +17,13 @@ solutions:
     description: Files are shared via link.  You can send the link via email, chat, or other method - even if the other person doesn't have an account.
   - title: Permissions and Security
     description: Each file link can be configured with the appropriate level of security, and your recipients' contact information is never exposed.
+
+gs-title: Get Started in 3 Easy Steps
+gs-image: https://stoffe.kawaiifabric.com/images/product_images/large_img/black-mesh-fabric-223630-1.jpg
+gs-video: 
+gs-description: Everyone can do it
+gs-action: /download
+
 
 section:
   items:
