--- a/lp/01/index.html
+++ b/lp/01/index.html
@@ -42,7 +42,7 @@ section:
 {% include sections/hero-lp.html %}
 <br/>
 {% include sections/solutions.html %} 
-
+{% include sections/get-started.html %} 
 {% include breadcrumbs.html %}
 
 <section>
