--- a/lp/01/index.html
+++ b/lp/01/index.html
@@ -19,10 +19,10 @@ solutions:
     description: Each file link can be configured with the appropriate level of security, and your recipients' contact information is never exposed.
 
 gs-title: Get Started in 3 Easy Steps
-gs-image: https://stoffe.kawaiifabric.com/images/product_images/large_img/black-mesh-fabric-223630-1.jpg
-gs-video: 
-gs-description: Everyone can do it
-gs-action-link: /download
+### gs-image: https://stoffe.kawaiifabric.com/images/product_images/large_img/black-mesh-fabric-223630-1.jpg
+gs-video: https://player.vimeo.com/video/485506439
+gs-description: Everyone can do it!
+gs-action-link: resources/download/#diode-drive-download
 gs-action-text: Download Now!
 
 ---
