--- a/lp/share-design-files-privately/index.html
+++ b/lp/share-design-files-privately/index.html
@@ -6,7 +6,7 @@ hero-xs-title: Share your design files privately
 
 page-title: Secure File Sharing
 page-description: Share large or confidential files without email, and without uploading to the cloud.
-solution-bg-image: /images/design_engineer.jpg
+solution-bg-image: /images/design-engineer.jpg
 solutions:
   - title: No Uploads
     description: Files are shared directly from your computer or other synchronized peer.  Your files never need to be uploaded to cloud storage.
