--- a/lp/share-files-privately/index.html
+++ b/lp/share-files-privately/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ### Hero Section
-hero-title: Share your files privately
-hero-xs-title: Share your files privately
+hero-title: Share your design files privately
+hero-xs-title: Share your design files privately
 
 page-title: Secure File Sharing
 page-description: Share large or confidential files without email, and without uploading to the cloud.
@@ -17,10 +17,10 @@ solutions:
 
 gs-title: Get Started in 3 Easy Steps
 ### gs-image: https://stoffe.kawaiifabric.com/images/product_images/large_img/black-mesh-fabric-223630-1.jpg
-gs-video: https://vimeo.com/551847182
+gs-video: https://player.vimeo.com/video/485506439
 gs-description: 1. Download and install the Diode Drive app.</br>2. Follow the guided process to set up your sharing zone.</br>3. Start sharing your files with confidence and security.
 gs-action-link: resources/download/#diode-drive-download
-gs-action-text: Get Diode
+gs-action-text: Download Now!
 
 ---
 
@@ -28,5 +28,6 @@ gs-action-text: Get Diode
 {% include sections/hero-lp.html %}
 <br/>
 {% include sections/solutions.html %} 
-{% include sections/get-diode.html %} 
+{% include sections/get-started.html %} 
 {% include breadcrumbs.html %}
+
