--- a/lp/share-files-privately/index.html
+++ b/lp/share-files-privately/index.html
@@ -20,7 +20,7 @@ gs-image: https://stoffe.kawaiifabric.com/images/product_images/large_img/black-
 gs-video: https://player.vimeo.com/video/485506439
 gs-description: 1. Download and install the Diode Drive app.</br>2. Follow the guided process to set up your sharing zone.</br>3. Start sharing your files with confidence and security.
 gs-action-link: resources/download/#diode-drive-download
-gs-action-text: Download Now!
+gs-action-text: Get Diode!
 
 ---
 
