--- a/lp/share-files-privately/index.html
+++ b/lp/share-files-privately/index.html
@@ -3,6 +3,8 @@ layout: default
 ### Hero Section
 hero-title: Share your design files privately
 hero-xs-title: Share your design files privately
+hero-action-link: resources/download/#diode-drive-download
+hero-action-text: Get Started
 
 page-title: Secure File Sharing
 page-description: Share large or confidential files without email, and without uploading to the cloud.
@@ -16,7 +18,7 @@ solutions:
     description: Each file link can be configured with the appropriate level of security, and your recipients' contact information is never exposed.
 
 gs-title: Get Started in 3 Easy Steps
-gs-image: https://stoffe.kawaiifabric.com/images/product_images/large_img/black-mesh-fabric-223630-1.jpg
+### gs-image: https://stoffe.kawaiifabric.com/images/product_images/large_img/black-mesh-fabric-223630-1.jpg
 gs-video: https://player.vimeo.com/video/485506439
 gs-description: 1. Download and install the Diode Drive app.</br>2. Follow the guided process to set up your sharing zone.</br>3. Start sharing your files with confidence and security.
 gs-action-link: resources/download/#diode-drive-download
