--- a/lp/share-design-files-privately/index.html
+++ b/lp/share-design-files-privately/index.html
@@ -3,6 +3,8 @@ layout: default
 ### Hero Section
 hero-title: Share your design files privately
 hero-xs-title: Share your design files privately
+hero-action-link: resources/download/#diode-drive-download
+hero-action-text: Get Started
 
 page-title: Secure File Sharing
 page-description: Share large or confidential files without email, and without uploading to the cloud.
