--- a/lp/share-files-privately/index.html
+++ b/lp/share-files-privately/index.html
@@ -4,7 +4,7 @@ layout: default
 hero-title: Share your design files privately
 hero-xs-title: Share your design files privately
 hero-action-link: resources/download/#diode-drive-download
-hero-action-text: Get Started
+hero-action-text: Get Diode
 
 page-title: Secure File Sharing
 page-description: Share large or confidential files without email, and without uploading to the cloud.
@@ -19,7 +19,7 @@ solutions:
 
 gs-title: Get Started in 3 Easy Steps
 ### gs-image: https://stoffe.kawaiifabric.com/images/product_images/large_img/black-mesh-fabric-223630-1.jpg
-gs-video: https://player.vimeo.com/video/485506439
+gs-video: https://player.vimeo.com/video/551847182
 gs-description: 1. Download and install the Diode Drive app.</br>2. Follow the guided process to set up your sharing zone.</br>3. Start sharing your files with confidence and security.
 gs-action-link: resources/download/#diode-drive-download
 gs-action-text: Get Diode!
