--- a/lp/share-design-files-privately/index.html
+++ b/lp/share-design-files-privately/index.html
@@ -8,7 +8,7 @@ hero-action-text: Get Started
 
 page-title: Secure File Sharing
 page-description: Share large or confidential files without email, and without uploading to the cloud.
-solution-bg-image: images/designer-engineer.jpg
+solution-bg-image: images/design-engineer.jpg
 solutions:
   - title: No Uploads
     description: Files are shared directly between you and the other party.  Your files never need to be uploaded to cloud storage.
