--- a/lp/share-files-privately/index.html
+++ b/lp/share-files-privately/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ### Hero Section
-hero-title: Share your files privately
-hero-xs-title: Share your files privately
+hero-title: Transfer files privately and securely
+hero-xs-title: Transfer files privately and securely
 hero-action-link: resources/download/#diode-drive-download
-hero-action-text: Get Diode
+hero-action-text: Download Diode Drive
 
 page-title: Secure File Sharing
 page-description: Share large or confidential files without email, and without uploading to the cloud.
