--- a/joinzone/index.html
+++ b/joinzone/index.html
@@ -1,10 +1,7 @@
 ---
-layout: default
+layout: default-no-footer
 header-title: Join Code
 header-description:  
 ---
-
-{% include header.html %}
-{% include breadcrumbs.html %}
 
 {% include sections/joinzone.html %}
