--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,20 @@
-hello
+---
+layout: ""
+---
+
+
+<!DOCTYPE html>
+<html>
+<head>
+   <!-- HTML meta refresh URL redirection -->
+   <meta http-equiv="refresh" content="5; url={{ site.github.url }}/resources/about/">
+</head>
+<body>
+   <script>
+      let url = document.location.toString().replace("/about/", "/resources/about/")
+      window.location.replace(url);
+   </script>
+   <p>The page has moved to:
+      <a href="{{ site.github.url }}/resources/about/">this page</a></p>
+</body>
+</html>
