--- a/pricing/index.html
+++ b/pricing/index.html
@@ -15,9 +15,10 @@ plans:
     action: resources/download
     action-name: Get Nomad
     items:
+      - title: Private collaboration
       - title: Unlimited storage
-      - title: Private drive collaboration
-      - title: File sharing via link
+      - title: 5 team members
+      - title: 10 web links
       
   - title: Freelancer
     description: Great fit for independent professionals.
@@ -31,8 +32,10 @@ plans:
     action-name: Order now
     items:
       - title: All Nomad +
-      - title: Up to 3 Collaborators
-      - title: Password protected links
+      - title: File backup
+      - title: Invitation codes
+      - title: 10 team members
+      - title: 50 web links
       - title: Basic support
 
   - title: Business
@@ -47,7 +50,8 @@ plans:
     action-name: Order now
     items:
       - title: All Freelancer +
-      - title: Up to 10 Collaborators
+      - title: Customize web link branding
+      - title: 100 web links
       - title: Premium support
 
 items:
