--- a/pricing/index.html
+++ b/pricing/index.html
@@ -15,7 +15,8 @@ plans:
     action: resources/download
     action-name: Get Nomad
     items:
-      - title: Private collaboration
+      - title: E2E encrypted files sharing
+      - title: E2E encrypted chat
       - title: Unlimited storage
       - title: 5 team members
       - title: 10 web links
