--- a/pricing/index.html
+++ b/pricing/index.html
@@ -15,7 +15,7 @@ plans:
     action: resources/download
     action-name: Get Nomad
     items:
-      - title: E2E encrypted files sharing
+      - title: E2E encrypted file sharing
       - title: E2E encrypted chat
       - title: Unlimited storage
       - title: 5 team members
