--- a/pricing/index.html
+++ b/pricing/index.html
@@ -15,8 +15,8 @@ plans:
     action: resources/download
     action-name: Get Nomad
     items:
-      - title: E2E encrypted file sharing
-      - title: E2E encrypted chat
+      - title: P2P file sharing
+      - title: P2P chat
       - title: Unlimited storage
       - title: 5 team members
       - title: 10 web links
@@ -51,7 +51,7 @@ plans:
     action-name: Order now
     items:
       - title: All Freelancer +
-      - title: Customize web link branding
+      - title: Custom link branding
       - title: 100 web links
       - title: Premium support
 
