--- a/pricing/index.html
+++ b/pricing/index.html
@@ -17,9 +17,11 @@ plans:
     items:
       - title: P2P file sharing
       - title: P2P chat
+      - title: E2EE group chat
       - title: Unlimited storage
-      - title: 5 team members
-      - title: 10 web links
+      - title: 3 team members
+      - title: 1 group chat channel
+      - title: 3 web links
       
   - title: Freelancer
     description: Great fit for independent professionals.
@@ -36,7 +38,8 @@ plans:
       - title: File backup
       - title: Invitation codes
       - title: 10 team members
-      - title: 50 web links
+      - title: 3 group chat channels
+      - title: 20 web links
       - title: Basic support
 
   - title: Business
@@ -52,6 +55,8 @@ plans:
     items:
       - title: All Freelancer +
       - title: Custom link branding
+      - title: 20+ team members
+      - title: 100 group chat channels
       - title: 100 web links
       - title: Premium support
 
