--- a/pricing/index.html
+++ b/pricing/index.html
@@ -15,9 +15,8 @@ plans:
     action: resources/download
     action-name: Get Nomad
     items:
-      - title: P2P file sharing
-      - title: P2P chat
-      - title: E2EE group chat
+      - title: E2EE group and P2P chat
+      - title: E2EE file sharing
       - title: Unlimited storage
       - title: 3 team members
       - title: 1 group chat channel
