--- a/pricing/index.html
+++ b/pricing/index.html
@@ -15,8 +15,10 @@ plans:
     action: resources/download
     action-name: Get Nomad
     items:
-      - title: E2EE group and P2P chat
+      - title: E2EE group chat and direct messaging
       - title: E2EE file sharing
+      - title: Secure in-app markdown editor
+      - title: Secure upload/download web links
       - title: Unlimited storage
       - title: 3 team members
       - title: 1 group chat channel
