--- a/pricing/index.html
+++ b/pricing/index.html
@@ -15,7 +15,7 @@ plans:
     action: resources/download
     action-name: Get Nomad
     items:
-      - title: E2EE group chat and direct messaging
+      - title: E2EE group chat and DMs
       - title: E2EE file sharing
       - title: Secure in-app markdown editor
       - title: Secure upload/download web links
