--- a/pricing/index.html
+++ b/pricing/index.html
@@ -17,8 +17,8 @@ plans:
     items:
       - title: E2EE group chat and DMs
       - title: E2EE file sharing
-      - title: Secure in-app markdown editor
-      - title: Secure upload/download web links
+      - title: Secure markdown editor
+      - title: Upload/download web links
       - title: Unlimited storage
       - title: 3 team members
       - title: 1 group chat channel
