--- a/pricing/index.html
+++ b/pricing/index.html
@@ -18,7 +18,7 @@ plans:
       - title: E2EE group chat and DMs
       - title: E2EE file sharing
       - title: Secure markdown editor
-      - title: Upload/download web links
+      - title: Browser upload/download
       - title: Unlimited storage
       - title: 3 team members
       - title: 1 group chat channel
